RESOLVED FIXED87797
[Cairo] [TextureMapperGL] Nvidia card does not update WebGL texture when interacting with canvas
https://bugs.webkit.org/show_bug.cgi?id=87797
Summary [Cairo] [TextureMapperGL] Nvidia card does not update WebGL texture when inte...
Martin Robinson
Reported 2012-05-29 17:31:12 PDT
When interacting with http://www.ibiblio.org/e-notes/webgl/deflate/ship.html with TextureMapperGL enabled, the canvas content does not update after the first render. It seems that Nvidia cards require manually rebinding to the multisampling FBO after multisample resolution. This is likely because the texture cannot be active on two framebuffers at once. This does not seem to be an issue for my Intel driver.
Attachments
Patch (2.22 KB, patch)
2012-05-29 17:34 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-05-29 17:34:08 PDT
Philippe Normand
Comment 2 2012-06-08 17:34:10 PDT
Comment on attachment 144659 [details] Patch Ok let's try this!
WebKit Review Bot
Comment 3 2012-06-08 17:56:21 PDT
Comment on attachment 144659 [details] Patch Clearing flags on attachment: 144659 Committed r119882: <http://trac.webkit.org/changeset/119882>
WebKit Review Bot
Comment 4 2012-06-08 17:56:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.