[Cairo] [TextureMapperGL] Nvidia card does not update WebGL texture when interacting with canvas https://bugs.webkit.org/show_bug.cgi?id=87797

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-06-08
Reviewed by Philippe Normand.

No new tests. WebGL is already covered by WebGL tests and this
bug is only present on certain hardware.

After resolving multisampling before drawing the texture via the
TextureMapper, first rebind the multisampling framebuffer. This ensures
that the texture isn't active in two framebuffers at a time.

* platform/graphics/cairo/GraphicsContext3DPrivate.cpp:
(WebCore::GraphicsContext3DPrivate::paintToTextureMapper): Rebind the multisampling
framebuffer.

Canonical link: https://commits.webkit.org/106518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119882 268f45cc-cd09-0410-ab3c-d52691b4dbfc